# ocaml-reed-solomon-erasure

./: .gitignore  CHANGELOG.md  README.md  gen_tables.ml  reed-solomon-erasure.opam
docs/: index.html
docs/reed-solomon-erasure/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure/Encode/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure/Reconstruct/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure/Verify/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__/Data/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__/Galois/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__/Inversion_tree/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Data/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Galois/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Inversion_tree/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Matrix/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Ops/: index.html
docs/reed-solomon-erasure/Reed_solomon_erasure__Tables/: index.html
generator/: gen_tables.ml
src/: data.ml  data_type.ml  errors.ml  galois.ml  galois.mli  inversion_tree.ml  inversion_tree.mli  jbuild  matrix.ml  matrix.mli  ops.ml  reed_solomon_erasure.ml  reed_solomon_erasure.mli
test/: galois_tests.ml  inversion_tree_tests.ml  jbuild  matrix_tests.ml  run_all_tests.ml
(+9 files in other folders)
