opam-version: "1.2"
name: "project"
version: "0.9"
maintainer: "Darren Ldl <darrenldldev@gmail.com>"
author: "Darren Ldl <darrenldldev@gmail.com>"
homepage: "https://github.com/darrenldl/ocaml-reed-solomon-erasure"
bug-reports: "https://github.com/darrenldl/ocaml-reed-solomon-erasure/issues"
license: "MIT"
dev-repo: "https://github.com/darrenldl/ocaml-reed-solomon-erasure.git"
build: [
  ["jbuilder" "build" "@install"]
]
depends: [
  "jbuilder" {build}
  "ounit" {build}
  "qcheck" {build}
]
